Include test cases for duration offloading function